Fix series show image overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,17 +6,3 @@
 .series-index {
   padding-top: 140px;
 }
-
-.index-row-header {
-  color: #999;
-  font-size: 1.4vw;
-  font-weight: 600;
-  display: inline-block;
-  text-decoration: none;
-  line-height: 1.3;
-  cursor: pointer;
-
-  &:hover {
-    color: #fff;
-  }
-}
